--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -30,8 +30,10 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background:red;
 }
+
+
+
 ol, ul {
 	list-style: none;
 }
@@ -55,7 +57,8 @@ table {
 
 html, body {
     height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+	font-family: 'Titillium Web', sans-serif;
+	background: #ddd;
 }
 
 h1, h2, h3, h4, h5 {
@@ -66,56 +69,182 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
-/*first-section img{
+div {
 	display: inline-block;
-	vertical-align:middle;
+	width: 49.5%;
+	height: calc(auto + 3em);
+	margin-bottom: 0;
+	text-align: center;
+	padding: 2em;
 }
-parent-main{
-	margin: 0% 5% 0% 0%;
+
+nav {
 	display: inline-block;
-	text-align: center;
-}
-first-section{
-	widows: 100%;
-	text-align: center;
-}*/
-
-.innovation{
-	display:inline-block;
-}
-nav{
-	border: 2px solid black!;
-	display:inline-block;
-}
-
-
-/* .list{
-	padding: 50px;
-} */
-
-
-.logo{
-	padding-left: 200px;
-}
-
-
-h1{
-	text-align: center;
-	font-size: 65px;
-	
-}
-
-/* .button{
-	text-align: center;
-	box-sizing: border-box;
-  	width: 120px;
-  	height: 35px;
-  	padding: 7px;  
-	border: 1px solid black;
 	margin: 0 auto;
-} */
-	
-a{
-	color:white;
-	text-decoration:none;
+	background: rgba(200,200,200, 1)
+}
+
+h1 {
+	display: inline-block; 
+	font-size: 6em;
+	text-align: center;
+	text-shadow: 1px 1px white;
+}
+
+h2 {
+	text-shadow: 1px 1px white;
+	width: 33%;
+	display: inline-block;
+}
+
+p {
+	background: rgba(255,255,255,0.4);
+	padding: .5em 1em;
+	box-shadow: 1px 1px 5px black;
+}
+
+div:not(.main-header) {
+	text-align: initial;
+}
+
+div.main-header {
+	margin-left: 4em;
+}
+
+nav ul li a {
+	font-weight: bold;
+	text-shadow: .5px .5px black;
+}
+
+div span {
+	display: inline-block;
+	width: 100%;
+	padding: 0;
+}
+
+div a {
+	display: inline-block;
+	height: calc(auto + 3em);
+	width: calc(auto + 3em);
+	border: 1px solid black;
+	padding: 1em 2em;
+	vertical-align: bottom;
+	text-align: center;
+}
+
+div a:hover {
+	/* transform: scale(1.3); */
+	color: black;
+	background: white;
+	animation: 1.2s infinite pulse;
+
+}
+
+li a {
+	text-decoration: none;
+	color: #444;
+	font-weight: bold;
+	text-shadow: .5px .5px gray;
+	padding: 1em;
+}
+
+nav li {
+	flex-basis: 80%;
+	padding: 1.75em;
+	display: inline-block;
+	border-right: 2px double black;
+	border-bottom: 2px double black;
+	box-shadow: 1px 2px 1px rgba(50,50,50,0.7);
+}
+
+
+nav li:first-child {
+	margin-left: 1em;
+}
+
+nav li:hover {
+	background: white;
+	transform: scale(1.1);
+}
+
+footer {
+	padding: 1em;
+
+}
+
+footer span {
+	padding: .5em 0;
+}
+
+address {
+	padding: .5em 0;
+}
+
+span {
+	display: block;
+	padding: .5em 0;
+}
+
+
+.logo {
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 1em;
+	padding-top: 1em;
+
+}
+
+.img-right {
+	display: inline-block;
+	width: 30.5%;
+	padding: 40px;
+	vertical-align: top;
+}
+
+.middle-img {
+	display: block;
+	width: 80%;
+	margin: 2em auto;
+	border: 2px solid black;
+	box-shadow: 2px 2px 5px rgba(50,50,50, .8)
+}
+
+.two-x-two {
+	display: inline-block;
+	width: 49.5%;
+	padding: 1em;
+}
+
+.three-x-three {
+	display: inline-block;
+	width: 30%;
+	padding: 1em;
+}
+
+#contactInfo {
+	display: block;
+	width: 30%;
+	padding: .5em 1em;
+	background: rgba(255,255,255,0.4);
+	box-shadow: 1px 2px 5px rgba(50,50,50,0.7);
+}
+
+#copyright {
+	display: block;
+	text-align: center;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(1);
+	}
+
+	50% {
+		transform: scale(1.3);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+
 }
